assets/css/style.css
#fromDatabase tr:nth-child(even){background-color: yellow;}
#fromDatabase tr:nth-child(odd){background-color: lime;}

  table, td, th,  tr {
    border-collapse: separate;
    border-color: black;
    border-width: 3px;
    border-style: solid;
    font-size: 14px;
    text-align: center;
    padding: 10px 0;
  }

div {
    display: inline-block;
    font-size: 22px;
    font-weight: bolder;
    color: black;
    text-align: center;
    height: auto;
    /* text-shadow: 4px 4px 8px #000; */
}

.form-row {
   background: url("../../images/palm-tree-inv.jpg");
   text-align: center;
   font-size: 16px;
   border-color: black;
    border-width: 1px;
    border-color: black;
    border-style: solid;
    border-radius: 11px;
}

.form-control {
    border-color: black;
    border-width: 1px;
    border-color: black;
    border-style: ridge;
    box-sizing: border-box;
}


#check input {
    position: absolute;
    cursor: pointer;
  }
  
  /* Create a custom checkbox */
  .checkmark {
    position: absolute;
    top: 0;
    left: 0;
    height: 50px;
    width: 25px;
    background-color: red;
  }
  
  /* On mouse-over, add a grey background color */
 #check:hover input ~ .checkmark {
    background-color: red;
  }
  
  /* When the checkbox is checked, add a blue background */
#check input:checked ~ .checkmark {
    background-color: yellow;
  }
  
  /* Create the checkmark/indicator (hidden when not checked) */
  .checkmark:after {
    content: "";
    position: absolute;
    display: none;
  }
  
  /* Show the checkmark when checked */
  .container input:checked ~ .checkmark:after {
    display: block;
  }
  
  /* Style the checkmark/indicator */
  .container .checkmark:after {
    left: 9px;
    top: 5px;
    width: 5px;
    height: 10px;
    border: solid white;
    border-width: 0 3px 3px 0;
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
  }

#submit-btn {
    cursor: pointer;
    font-size: 25px;
    color: white;
    /* background-color:yellow; */
    background: url("../../images/palm-tree.jpg");
    background-size: 100%;
    height: auto;
    font-weight: bolder;
    border-color: black;
    border-width: 7px;
    padding: 11px;
    border-radius: 11px;
    font-style: inherit;
    text-align: center;
    -webkit-text-stroke-width: 3px;
    -webkit-text-stroke-color: black;

}
.images {
  height: 100px;
  width: 100px;
}

.flexdisplay {
  display: flex;
  width: 80vw;
  height: 400px;
  overflow: auto;
  flex-direction: column;
  justify-content: flex-start;

}

#submit-btn:hover {

    color: yellow;
    
}

#submit-btn:active {
    background-color:red; /* When the button is clicked */
    box-shadow: 0 7px green;
    transform: translateY(4px);
  }

.container {
    font-family: Georgia, 'Times New Roman', Times, serif;
    font-size: 32px;
    color: red;
    font-weight: bolder;
}

html, body {
    text-align: center;
    font-size: 18 px;
    color: red;
    padding: 2px;
    background: url("../../images/hammock.jpg") no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}


footer {
    text-align: center;
    color:red;
    border-top: 1px solid white;
    background: transparent;
    font-weight: bolder;
}

.wrapper {
    width: 1024px;
    margin: 40px auto;
}

.jumbotron {
  background-color: rgba(255, 255, 255, .7)
}
  
@media only screen and (max-width: 980px) {
    body {
        max-width: 100%;
        height: auto;
    }
    .wrapper {
        width: 800px;
      }
}

@media only screen and (max-width: 768px) {
    body {
        max-width: 100%;
        height: auto;
    }
    .wrapper {
        width: 800px;
      }
}

@media only screen and (max-width: 640px) {
    body {
        max-width: 100%;
        height: auto;
    }
    header {
        position: static;
    }
    .wrapper {
        width: 600px;
    }
  }

